--- a/luaiocsupApp/src/Makefile
+++ b/luaiocsupApp/src/Makefile
@@ -15,13 +15,17 @@ DBD += luaiocsup.dbd
 DBD += luasubRecord.dbd
 
 # specify all source files to be compiled and added to the library
-luaiocsup_SRCS += lis_globals.c luaiocsup.c lis_common_support.c lis_string_manip.c lis_lua.c lis_data_structs.c lis_data_cast.c lis_luasubrec.c
+#luaiocsup_SRCS += lis_globals.c luaiocsup.c lis_common_support.c lis_string_manip.c lis_lua.c lis_data_structs.c lis_data_cast.c lis_luasubrec.c
+luaiocsup_SRCS += lis_globals.c luaiocsup.c lis_common_support.cpp lis_luasubrec.c
 
 luaiocsup_LIBS += $(EPICS_BASE_IOC_LIBS)
 
 USR_INCLUDES += -I/usr/local/include
-USR_SYS_LIBS += lua
-
+USR_SYS_LIBS += lua gtest
+USR_CFLAGS += -D USE_TYPED_RSET
+# Note: googletest was compiled by passing -DCMAKE_POSITION_INDEPENDENT_CODE=ON to cmake
+#       to prevent 'recompile with -fPIC' error when creating libluaiocsup.so
+ 
 #===========================
 
 include $(TOP)/configure/RULES
