moved gtest out of devsuplua into gtestioc

--- a/luaiocsupApp/src/Makefile
+++ b/luaiocsupApp/src/Makefile
@@ -21,10 +21,8 @@ luaiocsup_SRCS += lis_globals.c luaiocsup.c lis_common_support.cpp lis_luasubrec
 luaiocsup_LIBS += $(EPICS_BASE_IOC_LIBS)
 
 USR_INCLUDES += -I/usr/local/include
-USR_SYS_LIBS += lua gtest
+USR_SYS_LIBS += lua
 USR_CFLAGS += -D USE_TYPED_RSET
-# Note: googletest was compiled by passing -DCMAKE_POSITION_INDEPENDENT_CODE=ON to cmake
-#       to prevent 'recompile with -fPIC' error when creating libluaiocsup.so
  
 #===========================
 
