initial ci actions

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,7 @@ FROM amd64/debian:stable
 
 # Copy sed-patch files into image
 #COPY *.sed /tmp/
+COPY checkbuild.sh /tmp/checkbuild.sh
 
 # Package dependencies
 RUN apt-get update && \
@@ -20,4 +21,7 @@ RUN wget -P /tmp/ https://epics-controls.org/download/base/base-7.0.5.tar.gz && 
     tar xfz /tmp/base-7.0.5.tar.gz -C /usr/local/epics && \
     ln -s /usr/local/epics/base-7.0.5 /usr/local/epics/base && \
     cd /usr/local/epics/base && make
+
+
+ENTRYPOINT ["/tmp/checkbuild.sh"]
 
