--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Hello world action step
         id: hello
-        uses: actions/checkout@master
+        uses: gabadinho/checkout@master
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The output was"
